libwebgpu/lib/lib_webgpu.h


typedef int HTML_PREDEFINED_COLOR_SPACE;
void wgpu_request_animation_frame_loop(WGPU_BOOL (*callback)(double time, void *userData), void *userData);
typedef WGpuObjectBase WGpuDevice;
WGpuQueue wgpu_device_get_queue(WGpuDevice device);
void wgpu_device_tick(WGpuDevice device);
WGpuBuffer wgpu_device_create_buffer(WGpuDevice device, const WGpuBufferDescriptor *bufferDesc NOTNULL);
WGpuTexture wgpu_device_create_texture(WGpuDevice device, const WGpuTextureDescriptor *textureDesc NOTNULL);
WGpuSampler wgpu_device_create_sampler(WGpuDevice device, const WGpuSamplerDescriptor *samplerDesc NOTNULL);
WGpuExternalTexture wgpu_device_import_external_texture(WGpuDevice device, const WGpuExternalTextureDescriptor *externalTextureDesc NOTNULL);
WGpuBindGroupLayout wgpu_device_create_bind_group_layout(WGpuDevice device, const WGpuBindGroupLayoutEntry *bindGroupLayoutEntries, int numEntries);
WGpuPipelineLayout wgpu_device_create_pipeline_layout(WGpuDevice device, const WGpuBindGroupLayout *bindGroupLayouts, int numLayouts);
WGpuBindGroup wgpu_device_create_bind_group(WGpuDevice device, WGpuBindGroupLayout bindGroupLayout, const WGpuBindGroupEntry *entries, int numEntries);
WGpuShaderModule wgpu_device_create_shader_module(WGpuDevice device, const WGpuShaderModuleDescriptor *shaderModuleDesc NOTNULL);
typedef struct WGpuPipelineError
{
  const char *name; 
  const char *message; 
  const char *reason; 
} WGpuPipelineError;
typedef void (*WGpuCreatePipelineCallback)(WGpuDevice device, WGpuPipelineError *error, WGpuPipelineBase pipeline, void *userData);
WGpuComputePipeline wgpu_device_create_compute_pipeline(WGpuDevice device, WGpuShaderModule computeModule, const char *entryPoint, WGpuPipelineLayout layout, const WGpuPipelineConstant *constants, int numConstants);
void wgpu_device_create_compute_pipeline_async(WGpuDevice device, WGpuShaderModule computeModule, const char *entryPoint, WGpuPipelineLayout layout, const WGpuPipelineConstant *constants, int numConstants, WGpuCreatePipelineCallback callback, void *userData);
WGpuRenderPipeline wgpu_device_create_render_pipeline(WGpuDevice device, const WGpuRenderPipelineDescriptor *renderPipelineDesc NOTNULL);
void wgpu_device_create_render_pipeline_async(WGpuDevice device, const WGpuRenderPipelineDescriptor *renderPipelineDesc NOTNULL, WGpuCreatePipelineCallback callback, void *userData);
WGpuCommandEncoder wgpu_device_create_command_encoder(WGpuDevice device, const WGpuCommandEncoderDescriptor *commandEncoderDesc);
WGpuCommandEncoder wgpu_device_create_command_encoder_simple(WGpuDevice device);
typedef WGpuObjectBase WGpuBuffer;
typedef struct WGpuBufferDescriptor
{
  uint64_t size;
  WGPU_BUFFER_USAGE_FLAGS usage;
  WGPU_BOOL mappedAtCreation; 
} WGpuBufferDescriptor;
typedef int WGPU_BUFFER_USAGE_FLAGS;
typedef WGpuObjectBase WGpuTexture;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuTextureDescriptor
{
  WGPU_TEXTURE_FORMAT *viewFormats;
  _WGPU_PTR_PADDING(0);
  int numViewFormats;
  uint32_t width;
  uint32_t height; 
  uint32_t depthOrArrayLayers; 
  uint32_t mipLevelCount; 
  uint32_t sampleCount; 
  WGPU_TEXTURE_DIMENSION dimension; 
  WGPU_TEXTURE_FORMAT format;
  WGPU_TEXTURE_USAGE_FLAGS usage;
  uint32_t unused_padding;
} WGpuTextureDescriptor;
typedef int WGPU_TEXTURE_DIMENSION;
typedef int WGPU_TEXTURE_USAGE_FLAGS;
typedef int WGPU_TEXTURE_FORMAT;
typedef WGpuObjectBase WGpuExternalTexture;
typedef struct WGpuExternalTextureDescriptor
{
  WGpuObjectBase source;
  HTML_PREDEFINED_COLOR_SPACE colorSpace;
} WGpuExternalTextureDescriptor;
typedef WGpuObjectBase WGpuSampler;
typedef struct WGpuSamplerDescriptor
{
  WGPU_ADDRESS_MODE addressModeU; 
  WGPU_ADDRESS_MODE addressModeV; 
  WGPU_ADDRESS_MODE addressModeW; 
  WGPU_FILTER_MODE magFilter;     
  WGPU_FILTER_MODE minFilter;     
  WGPU_MIPMAP_FILTER_MODE mipmapFilter; 
  float lodMinClamp;              
  float lodMaxClamp;              
  WGPU_COMPARE_FUNCTION compare;  
  uint32_t maxAnisotropy;         
} WGpuSamplerDescriptor;
typedef int WGPU_ADDRESS_MODE;
typedef int WGPU_FILTER_MODE;
typedef int WGPU_MIPMAP_FILTER_MODE;
typedef int WGPU_COMPARE_FUNCTION;
typedef WGpuObjectBase WGpuBindGroupLayout;
typedef int WGPU_SHADER_STAGE_FLAGS;
typedef int WGPU_BIND_GROUP_LAYOUT_TYPE;
typedef struct WGpuBufferBindingLayout
{
  WGPU_BUFFER_BINDING_TYPE type;
  int hasDynamicOffset;
  uint64_t minBindingSize;
} WGpuBufferBindingLayout;
typedef struct WGpuSamplerBindingLayout
{
  WGPU_SAMPLER_BINDING_TYPE type;
} WGpuSamplerBindingLayout;
typedef struct WGpuTextureBindingLayout
{
  WGPU_TEXTURE_SAMPLE_TYPE sampleType;
  WGPU_TEXTURE_VIEW_DIMENSION viewDimension;
  WGPU_BOOL multisampled;
} WGpuTextureBindingLayout;
typedef struct WGpuStorageTextureBindingLayout
{
  WGPU_STORAGE_TEXTURE_ACCESS access;
  WGPU_TEXTURE_FORMAT format;
  WGPU_TEXTURE_VIEW_DIMENSION viewDimension;
} WGpuStorageTextureBindingLayout;
typedef struct WGpuExternalTextureBindingLayout
{
  uint32_t unused_padding; 
} WGpuExternalTextureBindingLayout;
typedef WGpuObjectBase WGpuBindGroup;
typedef struct WGpuBindGroupEntry
{
  uint32_t binding;
  WGpuObjectBase resource;
  uint64_t bufferBindOffset;
  uint64_t bufferBindSize; 
} WGpuBindGroupEntry;
typedef WGpuObjectBase WGpuPipelineLayout;
typedef WGpuObjectBase WGpuShaderModule;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuShaderModuleCompilationHint
{
  const char *entryPoint;
  _WGPU_PTR_PADDING(0);
  WGpuPipelineLayout layout;  
  uint32_t unused_padding;
} WGpuShaderModuleCompilationHint;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuShaderModuleDescriptor
{
  const char *code;
  _WGPU_PTR_PADDING(0);
  const WGpuShaderModuleCompilationHint *hints;
  _WGPU_PTR_PADDING(1);
  int numHints;
  uint32_t unused_padding;
} WGpuShaderModuleDescriptor;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuPipelineConstant
{
  const char *name;
  _WGPU_PTR_PADDING(0);
  double value;
} WGpuPipelineConstant;
typedef WGpuObjectBase WGpuComputePipeline;
typedef WGpuObjectBase WGpuRenderPipeline;
typedef WGpuObjectBase WGpuPipelineBase;
typedef struct WGpuPrimitiveState
{
  WGPU_PRIMITIVE_TOPOLOGY topology; 
  WGPU_INDEX_FORMAT stripIndexFormat; 
  WGPU_FRONT_FACE frontFace; 
  WGPU_CULL_MODE cullMode; 
  WGPU_BOOL unclippedDepth; 
} WGpuPrimitiveState;
typedef struct WGpuMultisampleState
{
  uint32_t count;
  uint32_t mask;
  WGPU_BOOL alphaToCoverageEnabled;
} WGpuMultisampleState;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuFragmentState
{
  const char *entryPoint;
  _WGPU_PTR_PADDING(0);
  const WGpuColorTargetState *targets;
  _WGPU_PTR_PADDING(1);
  const WGpuPipelineConstant *constants;
  _WGPU_PTR_PADDING(2);
  WGpuShaderModule module;
  int numTargets;
  int numConstants;
  uint32_t unused_padding;
} WGpuFragmentState;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuVertexState
{
  const char *entryPoint;
  _WGPU_PTR_PADDING(0);
  const WGpuVertexBufferLayout *buffers;
  _WGPU_PTR_PADDING(1);
  const WGpuPipelineConstant *constants;
  _WGPU_PTR_PADDING(2);
  WGpuShaderModule module;
  int numBuffers;
  int numConstants;
  uint32_t unused_padding;
} WGpuVertexState;
typedef WGpuObjectBase WGpuCommandEncoder;
typedef struct WGpuCommandEncoderDescriptor
{
  uint32_t unused_padding; 
} WGpuCommandEncoderDescriptor;
typedef WGpuObjectBase WGpuQueue;
typedef struct WGpuDepthStencilState
{
  WGPU_TEXTURE_FORMAT format;
  WGPU_BOOL depthWriteEnabled;
  WGPU_COMPARE_FUNCTION depthCompare;
  uint32_t stencilReadMask;
  uint32_t stencilWriteMask;
  int32_t depthBias;
  float depthBiasSlopeScale;
  float depthBiasClamp;
  WGpuStencilFaceState stencilFront;
  WGpuStencilFaceState stencilBack;
  WGPU_BOOL clampDepth;
} WGpuDepthStencilState;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuRenderPipelineDescriptor
{
  WGpuVertexState vertex;
  WGpuPrimitiveState primitive;
  WGpuDepthStencilState depthStencil;
  WGpuMultisampleState multisample;
  uint32_t unused_padding;
  WGpuFragmentState fragment;
  WGpuPipelineLayout layout; 
  uint32_t unused_padding2;
} WGpuRenderPipelineDescriptor;
typedef struct WGpuBindGroupLayoutEntry
{
  uint32_t binding;
  WGPU_SHADER_STAGE_FLAGS visibility;
  WGPU_BIND_GROUP_LAYOUT_TYPE type;
  uint32_t unused_padding; 
  union {
    WGpuBufferBindingLayout buffer;
    WGpuSamplerBindingLayout sampler;
    WGpuTextureBindingLayout texture;
    WGpuStorageTextureBindingLayout storageTexture;
    WGpuExternalTextureBindingLayout externalTexture;
  } layout;
} WGpuBindGroupLayoutEntry;