lib/ffi/ffi_webgpu.dart


  late final _wgpu_device_get_queuePtr =
      _lookup<ffi.NativeFunction<WGpuQueue Function(WGpuDevice)>>(
          'wgpu_device_get_queue');
  late final _wgpu_device_get_queue =
      _wgpu_device_get_queuePtr.asFunction<WGpuQueue Function(WGpuDevice)>();

  void wgpu_device_tick(
    WGpuDevice device,
  ) {
    return _wgpu_device_tick(
      device,
    );
  }

  late final _wgpu_device_tickPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuDevice)>>(
          'wgpu_device_tick');
  late final _wgpu_device_tick =
      _wgpu_device_tickPtr.asFunction<void Function(WGpuDevice)>();

  WGpuBuffer wgpu_device_create_buffer(
    WGpuDevice device,
    ffi.Pointer<WGpuBufferDescriptor> bufferDesc,
  ) {
    return _wgpu_device_create_buffer(
      device,
      bufferDesc,
    );
  }

  late final _wgpu_device_create_bufferPtr = _lookup<
      ffi.NativeFunction<
          WGpuBuffer Function(WGpuDevice,
              ffi.Pointer<WGpuBufferDescriptor>)>>('wgpu_device_create_buffer');
  late final _wgpu_device_create_buffer =
      _wgpu_device_create_bufferPtr.asFunction<
          WGpuBuffer Function(WGpuDevice, ffi.Pointer<WGpuBufferDescriptor>)>();

  WGpuTexture wgpu_device_create_texture(
    WGpuDevice device,
    ffi.Pointer<WGpuTextureDescriptor> textureDesc,
  ) {
    return _wgpu_device_create_texture(
      device,
      textureDesc,
    );
  }

  late final _wgpu_device_create_texturePtr = _lookup<
          ffi.NativeFunction<
              WGpuTexture Function(
                  WGpuDevice, ffi.Pointer<WGpuTextureDescriptor>)>>(
      'wgpu_device_create_texture');
  late final _wgpu_device_create_texture =
      _wgpu_device_create_texturePtr.asFunction<
          WGpuTexture Function(
              WGpuDevice, ffi.Pointer<WGpuTextureDescriptor>)>();

  WGpuSampler wgpu_device_create_sampler(
    WGpuDevice device,
    ffi.Pointer<WGpuSamplerDescriptor> samplerDesc,
  ) {
    return _wgpu_device_create_sampler(
      device,
      samplerDesc,
    );
  }

  late final _wgpu_device_create_samplerPtr = _lookup<
          ffi.NativeFunction<
              WGpuSampler Function(
                  WGpuDevice, ffi.Pointer<WGpuSamplerDescriptor>)>>(
      'wgpu_device_create_sampler');
  late final _wgpu_device_create_sampler =
      _wgpu_device_create_samplerPtr.asFunction<
          WGpuSampler Function(
              WGpuDevice, ffi.Pointer<WGpuSamplerDescriptor>)>();

  WGpuExternalTexture wgpu_device_import_external_texture(
    WGpuDevice device,
    ffi.Pointer<WGpuExternalTextureDescriptor> externalTextureDesc,
  ) {
    return _wgpu_device_import_external_texture(
      device,
      externalTextureDesc,
    );
  }

  late final _wgpu_device_import_external_texturePtr = _lookup<
          ffi.NativeFunction<
              WGpuExternalTexture Function(
                  WGpuDevice, ffi.Pointer<WGpuExternalTextureDescriptor>)>>(
      'wgpu_device_import_external_texture');
  late final _wgpu_device_import_external_texture =
      _wgpu_device_import_external_texturePtr.asFunction<
          WGpuExternalTexture Function(
              WGpuDevice, ffi.Pointer<WGpuExternalTextureDescriptor>)>();

  WGpuBindGroupLayout wgpu_device_create_bind_group_layout(
    WGpuDevice device,
    ffi.Pointer<WGpuBindGroupLayoutEntry> bindGroupLayoutEntries,
    int numEntries,
  ) {
    return _wgpu_device_create_bind_group_layout(
      device,
      bindGroupLayoutEntries,
      numEntries,
    );
  }

  late final _wgpu_device_create_bind_group_layoutPtr = _lookup<
      ffi.NativeFunction<
          WGpuBindGroupLayout Function(
              WGpuDevice,
              ffi.Pointer<WGpuBindGroupLayoutEntry>,
              ffi.Int)>>('wgpu_device_create_bind_group_layout');
  late final _wgpu_device_create_bind_group_layout =
      _wgpu_device_create_bind_group_layoutPtr.asFunction<
          WGpuBindGroupLayout Function(
              WGpuDevice, ffi.Pointer<WGpuBindGroupLayoutEntry>, int)>();

  WGpuPipelineLayout wgpu_device_create_pipeline_layout(
    WGpuDevice device,
    ffi.Pointer<WGpuBindGroupLayout> bindGroupLayouts,
    int numLayouts,
  ) {
    return _wgpu_device_create_pipeline_layout(
      device,
      bindGroupLayouts,
      numLayouts,
    );
  }

  late final _wgpu_device_create_pipeline_layoutPtr = _lookup<
      ffi.NativeFunction<
          WGpuPipelineLayout Function(
              WGpuDevice,
              ffi.Pointer<WGpuBindGroupLayout>,
              ffi.Int)>>('wgpu_device_create_pipeline_layout');
  late final _wgpu_device_create_pipeline_layout =
      _wgpu_device_create_pipeline_layoutPtr.asFunction<
          WGpuPipelineLayout Function(
              WGpuDevice, ffi.Pointer<WGpuBindGroupLayout>, int)>();

  WGpuBindGroup wgpu_device_create_bind_group(
    WGpuDevice device,
    WGpuBindGroupLayout bindGroupLayout,
    ffi.Pointer<WGpuBindGroupEntry> entries,
    int numEntries,
  ) {
    return _wgpu_device_create_bind_group(
      device,
      bindGroupLayout,
      entries,
      numEntries,
    );
  }

  late final _wgpu_device_create_bind_groupPtr = _lookup<
      ffi.NativeFunction<
          WGpuBindGroup Function(
              WGpuDevice,
              WGpuBindGroupLayout,
              ffi.Pointer<WGpuBindGroupEntry>,
              ffi.Int)>>('wgpu_device_create_bind_group');
  late final _wgpu_device_create_bind_group =
      _wgpu_device_create_bind_groupPtr.asFunction<
          WGpuBindGroup Function(WGpuDevice, WGpuBindGroupLayout,
              ffi.Pointer<WGpuBindGroupEntry>, int)>();

  WGpuShaderModule wgpu_device_create_shader_module(
    WGpuDevice device,
    ffi.Pointer<WGpuShaderModuleDescriptor> shaderModuleDesc,
  ) {
    return _wgpu_device_create_shader_module(
      device,
      shaderModuleDesc,
    );
  }

  late final _wgpu_device_create_shader_modulePtr = _lookup<
          ffi.NativeFunction<
              WGpuShaderModule Function(
                  WGpuDevice, ffi.Pointer<WGpuShaderModuleDescriptor>)>>(
      'wgpu_device_create_shader_module');
  late final _wgpu_device_create_shader_module =
      _wgpu_device_create_shader_modulePtr.asFunction<
          WGpuShaderModule Function(
              WGpuDevice, ffi.Pointer<WGpuShaderModuleDescriptor>)>();

  WGpuComputePipeline wgpu_device_create_compute_pipeline(
    WGpuDevice device,
    WGpuShaderModule computeModule,
    ffi.Pointer<ffi.Char> entryPoint,
    WGpuPipelineLayout layout,
    ffi.Pointer<WGpuPipelineConstant> constants,
    int numConstants,
  ) {
    return _wgpu_device_create_compute_pipeline(
      device,
      computeModule,
      entryPoint,
      layout,
      constants,
      numConstants,
    );
  }

  late final _wgpu_device_create_compute_pipelinePtr = _lookup<
      ffi.NativeFunction<
          WGpuComputePipeline Function(
              WGpuDevice,
              WGpuShaderModule,
              ffi.Pointer<ffi.Char>,
              WGpuPipelineLayout,
              ffi.Pointer<WGpuPipelineConstant>,
              ffi.Int)>>('wgpu_device_create_compute_pipeline');
  late final _wgpu_device_create_compute_pipeline =
      _wgpu_device_create_compute_pipelinePtr.asFunction<
          WGpuComputePipeline Function(
              WGpuDevice,
              WGpuShaderModule,
              ffi.Pointer<ffi.Char>,
              WGpuPipelineLayout,
              ffi.Pointer<WGpuPipelineConstant>,
              int)>();

  void wgpu_device_create_compute_pipeline_async(
    WGpuDevice device,
    WGpuShaderModule computeModule,
    ffi.Pointer<ffi.Char> entryPoint,
    WGpuPipelineLayout layout,
    ffi.Pointer<WGpuPipelineConstant> constants,
    int numConstants,
    WGpuCreatePipelineCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wgpu_device_create_compute_pipeline_async(
      device,
      computeModule,
      entryPoint,
      layout,
      constants,
      numConstants,
      callback,
      userData,
    );
  }

  late final _wgpu_device_create_compute_pipeline_asyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  WGpuDevice,
                  WGpuShaderModule,
                  ffi.Pointer<ffi.Char>,
                  WGpuPipelineLayout,
                  ffi.Pointer<WGpuPipelineConstant>,
                  ffi.Int,
                  WGpuCreatePipelineCallback,
                  ffi.Pointer<ffi.Void>)>>(
      'wgpu_device_create_compute_pipeline_async');
  late final _wgpu_device_create_compute_pipeline_async =
      _wgpu_device_create_compute_pipeline_asyncPtr.asFunction<
          void Function(
              WGpuDevice,
              WGpuShaderModule,
              ffi.Pointer<ffi.Char>,
              WGpuPipelineLayout,
              ffi.Pointer<WGpuPipelineConstant>,
              int,
              WGpuCreatePipelineCallback,
              ffi.Pointer<ffi.Void>)>();

  WGpuRenderPipeline wgpu_device_create_render_pipeline(
    WGpuDevice device,
    ffi.Pointer<WGpuRenderPipelineDescriptor> renderPipelineDesc,
  ) {
    return _wgpu_device_create_render_pipeline(
      device,
      renderPipelineDesc,
    );
  }

  late final _wgpu_device_create_render_pipelinePtr = _lookup<
          ffi.NativeFunction<
              WGpuRenderPipeline Function(
                  WGpuDevice, ffi.Pointer<WGpuRenderPipelineDescriptor>)>>(
      'wgpu_device_create_render_pipeline');
  late final _wgpu_device_create_render_pipeline =
      _wgpu_device_create_render_pipelinePtr.asFunction<
          WGpuRenderPipeline Function(
              WGpuDevice, ffi.Pointer<WGpuRenderPipelineDescriptor>)>();

  void wgpu_device_create_render_pipeline_async(
    WGpuDevice device,
    ffi.Pointer<WGpuRenderPipelineDescriptor> renderPipelineDesc,
    WGpuCreatePipelineCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wgpu_device_create_render_pipeline_async(
      device,
      renderPipelineDesc,
      callback,
      userData,
    );
  }

  late final _wgpu_device_create_render_pipeline_asyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  WGpuDevice,
                  ffi.Pointer<WGpuRenderPipelineDescriptor>,
                  WGpuCreatePipelineCallback,
                  ffi.Pointer<ffi.Void>)>>(
      'wgpu_device_create_render_pipeline_async');
  late final _wgpu_device_create_render_pipeline_async =
      _wgpu_device_create_render_pipeline_asyncPtr.asFunction<
          void Function(WGpuDevice, ffi.Pointer<WGpuRenderPipelineDescriptor>,
              WGpuCreatePipelineCallback, ffi.Pointer<ffi.Void>)>();

  WGpuCommandEncoder wgpu_device_create_command_encoder(
    WGpuDevice device,
    ffi.Pointer<WGpuCommandEncoderDescriptor> commandEncoderDesc,
  ) {
    return _wgpu_device_create_command_encoder(
      device,
      commandEncoderDesc,
    );
  }

  late final _wgpu_device_create_command_encoderPtr = _lookup<
          ffi.NativeFunction<
              WGpuCommandEncoder Function(
                  WGpuDevice, ffi.Pointer<WGpuCommandEncoderDescriptor>)>>(
      'wgpu_device_create_command_encoder');
  late final _wgpu_device_create_command_encoder =
      _wgpu_device_create_command_encoderPtr.asFunction<
          WGpuCommandEncoder Function(
              WGpuDevice, ffi.Pointer<WGpuCommandEncoderDescriptor>)>();

  WGpuCommandEncoder wgpu_device_create_command_encoder_simple(
    WGpuDevice device,
  ) {
    return _wgpu_device_create_command_encoder_simple(
      device,
    );
  }

  late final _wgpu_device_create_command_encoder_simplePtr =
      _lookup<ffi.NativeFunction<WGpuCommandEncoder Function(WGpuDevice)>>(
          'wgpu_device_create_command_encoder_simple');
  late final _wgpu_device_create_command_encoder_simple =
      _wgpu_device_create_command_encoder_simplePtr
          .asFunction<WGpuCommandEncoder Function(WGpuDevice)>();
